# ChangeLog for dev-perl/XML-AutoWriter
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-AutoWriter/ChangeLog,v 1.29 2012/12/14 11:35:42 ulm Exp $

  14 Dec 2012; Ulrich Müller <ulm@gentoo.org> XML-AutoWriter-0.400.0.ebuild:
  Fix LICENSE, bug 445266.

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  08 Jun 2012; Torsten Veller <tove@gentoo.org> XML-AutoWriter-0.400.0.ebuild:
  Remove auto_set_repository from Makefile.PL (#420175)

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -XML-AutoWriter-0.400.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> XML-AutoWriter-0.400.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*XML-AutoWriter-0.400.0 (28 Aug 2011)

  28 Aug 2011; Torsten Veller <tove@gentoo.org> +XML-AutoWriter-0.400.0.ebuild:
  Change version scheme

*XML-AutoWriter-0.400 (14 Jan 2011)

  14 Jan 2011; Torsten Veller <tove@gentoo.org> -XML-AutoWriter-0.39.ebuild,
  -XML-AutoWriter-0.40.ebuild, +XML-AutoWriter-0.400.ebuild:
  Convert ebuild version. Cleanup

  24 Oct 2010; Raúl Porcel <armin76@gentoo.org> XML-AutoWriter-0.40.ebuild:
  ia64/sparc stable wrt #341211

  22 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
  XML-AutoWriter-0.40.ebuild:
  stable x86, bug 341211

  21 Oct 2010; Jeroen Roovers <jer@gentoo.org> XML-AutoWriter-0.40.ebuild:
  Stable for HPPA (bug #341211).

  18 Oct 2010; Markos Chandras <hwoarang@gentoo.org>
  XML-AutoWriter-0.40.ebuild:
  Stable on amd64 wrt bug #341211

*XML-AutoWriter-0.40 (11 Nov 2009)

  11 Nov 2009; Christian Ruppert <idl0r@gentoo.org>
  -XML-AutoWriter-0.4.ebuild, +XML-AutoWriter-0.40.ebuild:
  Fix previous commit/renamed to 0.40. Some clean up.

*XML-AutoWriter-0.4 (11 Nov 2009)

  11 Nov 2009; Christian Ruppert <idl0r@gentoo.org>
  +XML-AutoWriter-0.4.ebuild:
  Bump to 0.4.

  02 May 2009; Torsten Veller <tove@gentoo.org> -XML-AutoWriter-0.38.ebuild:
  Cleanup
