@@ -2,23 +2,20 @@
 Hash: SHA256
 
 DIST XML-AutoWriter-0.4.tar.gz 48672 SHA256 8ff09ff84c3c91f7db8e79db2de149391a97605a35f55f3cafb5e95f1e1f759c SHA512 ef49a052df8686d5e3fa14ff83053b5dfb617a3fac66db47c5f7d539d54423e7a95aa7612e313a581c9f2012f996f4a8019652079ef096ced3b22203de26e992 WHIRLPOOL 886535946fd6e9318478bea1a27afd197a5f4afdd490d745ce0ef9d13198ead8fb3cad2b7e48b27fbdd40167de7cef5e40bc2a17ab109efcf86733c0016a6f0f
-EBUILD XML-AutoWriter-0.400.0.ebuild 575 SHA256 f2933bb8f73989a141bbdf336e52f2db6bcbf0ac632a2ae094ac39a532fd6286 SHA512 ebbd9496b969eccc72cddb8eb099ef64f0f9277d50e3fb334c82cd5da1d106a4e30aa49701051a5d3748a53c86689884775ab4e44319edb1bf076698b815f956 WHIRLPOOL f28b004e6d640e4d7d53b4b7b6cff2489571cfafdb9a0917b3eb31a461bfa18b1ea776ced132e337751284c25f5159c963523991f1a4de45c47aed15709dfd20
-MISC ChangeLog 3757 SHA256 b881ff7a416039c1d9457f02e050fd1b7fc3aa870d44a78b4092bcc07c6c723b SHA512 02ca9d30062ca8e3260541ec061727680c1cbcf8ab4fd4ab17016040ed90d1ef8e5cb7a6b7ce0069d018c02dae77ae0066f1be06272bc39c06a9e977cf8c0cf8 WHIRLPOOL c39e9eba019995d227bdaaa171c9bf643e4efdeef618d3f3f5c00e88098beaeb1706642dc48bcb333416f9a95a5e43629389ad51b4719e6a6f4cba43a5b4fe28
+EBUILD XML-AutoWriter-0.400.0.ebuild 598 SHA256 0a60319a3d6f53d0d1441f6eea707838a51a7c8afc57a15ab863e4072578298c SHA512 71d77150f74a30abd2a7e0d4c21a7164939832e419b7ed1ef4ae91e79729322264af451aa060158d6b6bf272606bf40759db7f8c9e2cef0aa56796437b05999b WHIRLPOOL 6c405079c9aa9daaad3c657515c1dff50258eed73bd20b24935bb7bf132607ca49b2a59108cfadd4300bd36d61852f410c087c33e0106301a47f0e8518a6e4aa
+MISC ChangeLog 3912 SHA256 51e165e6167513c06282439f6cedd90247a770b850124dbd08d309004a3c756e SHA512 47acdb5d09701aa53cc4a0544a39b80d252861759e6f3f08844288ce7816c45f4efc70932b08771fc669e585b13a62bf23f2aec17e667512b2e6f4dc0b3e7ad6 WHIRLPOOL da19d3d0156ae83555166e24aa4c5c6f4930a703e8b9aed67dec4c468e39aa0c177570d12d811b33d5da1d81d2f7c2bc281bb898a3fc85a6e767a4600c209710
 MISC metadata.xml 624 SHA256 d51e47c3b0756e9e331dc6110edf30befd14c733044fac86d8e82b10bbca85c2 SHA512 49274be2b0fe1c1c0732e9f55c6c31202a474ba30186cdedee242e17a47ff8828a46f864a1f75d79cc29c1b7681eed9532874a723c4e2d5dd429ebe6cd92f7d5 WHIRLPOOL 51935a1e0998da738867b0c7e86ca820d672d07ea7577e2fabefd7d2f380d9078054ae68b256a55619f1f1f016ae05fd675cbd5226fc7bbe0b5abb9f7407bf45
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCAAGBQJQyw9/AAoJEDxpGckxwJCBe0oP/j+xz7f2qIgrEknPakOpGujy
-KX4ahAkPcyWl9GujSj2tEsmU1N92wu6f11+nkhGDDV8sVWFOCC6lJJfziXLR6lqI
-1MI+qm/JYJ0ucmPZMX9hXth22nnOBjvFaGCMLrF8d4KeSimyRbMBEFJK+Gayr+4q
-53AYT4eEJ7Ndg4iB6zl8J6HjRGMlMW8QWq61Ddb/rhVgn1uR7FEu9DqbkcSNOp8l
-aM80DQmhX24Ctm/llg2Ho64IY8x/UUKYllEZaX2CZzIPmulgZJ4baWNiEmBJec0v
-1q/or1rzjMLEABLqNQTvnfZXVuJBaSlp56FjxROC4HGRaZ4P5Owpr6DE/ng5ePTD
-LsNwM8TNpqn4gC70jLwGVIqHoOvx6wbCl0Bx6tRw7y9pySDpDpdXEXG2Eyg2Ns3L
-XvJo2qAqNrcI+TGvq7zRIMO3WQ2lIZGNwhO03gFiWkDntCUL+th/7DFtzsegzOYc
-NEpBm+TLD268/uQURqYJ37vUHvrlvkrSkexb5zExPIJ8tLrW7Okty71HpXacQYcq
-OLmxfB2mMLPPPpVjadwfHxYEXyqmb974QcHt6gCea1BJ176wvGlvwZ2pAOfNxOdg
-0auh20rmYe2ksmBZrrekUajo5t5hfez+6myHPyJJv6JR0d9dL7HeIjrhVd7eRJtv
-jPEHm3mS56f5B+4zG1wW
-=up4I
+iQGcBAEBCAAGBQJRggLVAAoJEJQzkH1pP7W4d8oL/1CYjHHiQ0k7OkeKOHtQp41/
+AnuEvjH3Jq38tpB5xpwUr3XDtIFmmKTE9xXHTrqrob4X6MjgERB568/zs3i1w9vL
+UDnbTmo2GkS6LjUTBAavAxeUNVC1DmileLWt5tCxJpxvW5ceGzAjr+ypjPCADIHg
+DWha73FBOXa6g179QhDFms+zlTuBW+MYIcSQvVqXwO3TQJ/6Sj/bEKqW0Uwyl+Wf
+hCzecWre7/T4quC7NswxzizKX8OvOy4ftfmHm7FLRTSnOab7YELGnXdZHETom9GZ
+8ncH3866t4RU4yI0ivcqfeGen3Es9gVkuOjzb7uCsB0stAk8QDjMjFpciyKQ5lMW
+jxwNjdjwsKhF4w6T//STkBF6b6iz6V3l/iqDZIHyExB2zux3BmYi94P0+qip9XAu
+ThJSQiLltt6hkuYJQ7L7KBulNZK0t5s8d17iqCbfJsMICTWNTx2l9BOahcVxumwX
+4L5SLSXBrXClnAfKy2PJ83f5/PeMW5byYz7HBDvrcA==
+=zzDX
 -----END PGP SIGNATURE-----
