@@ -1,6 +1,6 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-AutoWriter/XML-AutoWriter-0.400.0.ebuild,v 1.4 2012/12/14 11:35:42 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-AutoWriter/XML-AutoWriter-0.400.0.ebuild,v 1.5 2013/05/02 06:06:49 ulm Exp $
 
 EAPI=4
 
@@ -10,7 +10,7 @@ inherit perl-module
 
 DESCRIPTION="DOCTYPE based XML output"
 
-LICENSE="BSD"
+LICENSE="|| ( Artistic GPL-1+ BSD )"
 SLOT="0"
 KEYWORDS="amd64 hppa ia64 sparc x86"
 IUSE=""
