@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/XML-AutoWriter
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-AutoWriter/ChangeLog,v 1.29 2012/12/14 11:35:42 ulm Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-AutoWriter/ChangeLog,v 1.30 2013/05/02 06:06:49 ulm Exp $
+
+  02 May 2013; Ulrich Müller <ulm@gentoo.org> XML-AutoWriter-0.400.0.ebuild:
+  Relicensed to user's choice of GPL, Artistic, or BSD license, bug 445266.
 
   14 Dec 2012; Ulrich Müller <ulm@gentoo.org> XML-AutoWriter-0.400.0.ebuild:
   Fix LICENSE, bug 445266.
